# 7643725 - Default Sidebar Menu Styling --alignment fixes for sidebar menu

--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ License URI:  https://www.gnu.org/licenses/gpl-3.0.html
     }
 
     #wrapper .side-nav-widget li ul.children{
-        padding-left: 15px !important;
+        padding-left: 0px !important;
         margin-left: 0;
     }
 
@@ -360,6 +360,9 @@ License URI:  https://www.gnu.org/licenses/gpl-3.0.html
         color: #e64900;
     }
 
+#wrapper .side-nav-widget li a{
+    padding-left: 0 !important;
+}
 
 
 /*CSS for mobile*/
@@ -447,7 +450,7 @@ License URI:  https://www.gnu.org/licenses/gpl-3.0.html
     /* Side Navigation Widget */
     #wrapper .side-nav-widget li a { display:block; }
     #wrapper .side-nav-widget li.current_page_item>a {
-        padding-left: 23px;
+        padding-left: 23px !important;
         border-left: 3px solid #a0ce4e;
     }
     #wrapper .side-nav-widget li a {
